<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <artifactId>singer-commons</artifactId>
  <packaging>jar</packaging>
  <description>Singer configuration and audit client library </description>
  <properties>
    <java.version>1.8</java.version>
    <junit.version>4.12</junit.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.version>3.3.9</maven.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <slf4j.version>1.7.16</slf4j.version>
    <kafka.client.version>2.1.0</kafka.client.version>
  </properties>

  <parent>
    <groupId>com.pinterest.singer</groupId>
    <artifactId>singer-package</artifactId>
    <version>0.8.0.5</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  <developers>
    <developer>
      <id>yuyang08</id>
      <name>Yu Yang</name>
    </developer>
    <developer>
      <id>ambud</id>
      <name>Ambud Sharma</name>
    </developer>
    <developer>
      <id>zzhhhzz</id>
      <name>Heng Zhang</name>
    </developer>
  </developers>

  <scm>
    <connection>https://github.com/pinterest/singer.git</connection>
    <developerConnection>https://github.com/pinterest/singer.git</developerConnection>
    <url>https://github.com/pinterest/singer</url>
  </scm>

  <dependencies>
    <dependency>
      <groupId>com.twitter</groupId>
      <artifactId>ostrich_2.11</artifactId>
      <version>9.27.0</version>
    </dependency>
    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>1.9</version>
    </dependency>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka_2.11</artifactId>
      <version>${kafka.client.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-clients</artifactId>
      <version>${kafka.client.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-jdk14</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.thrift</groupId>
      <artifactId>libthrift</artifactId>
      <version>0.12.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.2</version>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.6</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <!-- Thrift source generate plugin. -->
      <plugin>
        <groupId>com.twitter</groupId>
        <artifactId>scrooge-maven-plugin</artifactId>
        <!-- this version must match the version from scrooge-gen.ivy.xml -->
        <!-- scrooge has a bug where it ignores defaults when compiling bool, hence upgraded the version -->
        <version>4.18.0</version>
        <configuration>
          <language>java</language>
          <!-- default is scala, can also be java -->
          <thriftOpts>
            <!-- add other Scrooge command line options using thriftOpts -->
            <thriftOpt>--finagle</thriftOpt>
          </thriftOpts>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.7.25</version>
          </dependency>
          <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>thrift-sources</id>
            <goals>
              <goal>compile</goal>
            </goals>
            <phase>generate-sources</phase>
          </execution>
          <execution>
            <id>thrift-test-sources</id>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <phase>generate-test-sources</phase>
          </execution>
        </executions>
      </plugin>
      <!-- This forces the dependencies to be copied to target/lib -->
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-source</id>
            <goals>
              <goal>add-source</goal>
            </goals>
            <phase>generate-sources</phase>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/thrift/scrooge/</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
          <additionalparam>-Xdoclint:none</additionalparam>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Xmx4096m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <inceptionYear>2013</inceptionYear>
</project>